[gd_scene load_steps=2 format=2]

[ext_resource path="res://LimitedCamera.gd" type="Script" id=1]

[node name="LimitedCamera" type="Camera2D"]
zoom = Vector2( 1.6, 1.6 )
script = ExtResource( 1 )

[node name="ShakeTimer" type="Timer" parent="."]

[node name="ShakeDurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
[connection signal="timeout" from="ShakeDurationTimer" to="." method="_on_ShakeDurationTimer_timeout"]
